<resources>
    <string name="app_name">My Movies App</string>
    <string name="main_img_description">Main image</string>
    <string name="background_img_description">"Background image</string>
    <string name="trailer_btn_text">MOVIE TRAILER</string>
    <string name="released">Released:</string>
    <string name="overview_title">Overview</string>
    <!--> titles </!-->
    <string name="infinity_war_name">Avengers: Infinity War</string>
    <string name="black_panther_name">Black Panther</string>
    <string name="deadpool2_name">Deadpool 2</string>
    <string name="guardians_of_the_galaxy_name">Guardians Of The Galaxy</string>
    <string name="interstellar_name">Interstellar</string>
    <string name="jurrasic_world_name">Jurassic World: Fallen Kingdom </string>
    <string name="oceans8_name">Ocean\'s 8</string>
    <string name="the_first_purge_name">The First Purge</string>
    <string name="the_meg_name">The Meg</string>
    <string name="thor_ragnarok_name">Thor: Ragnarok</string>
    <!--> release dates </!-->
    <string name="infinity_war_released_date">2018—01—01</string>
    <!--> urls </!-->
    <string name="black_panther_url">https://www.youtube.com/watch?v=xjDjIWPwcPU</string>
    <string name="deadpool2_url">https://www.youtube.com/watch?v=D86RtevtfrA</string>
    <string name="guardians_of_the_galaxy_url">https://www.youtube.com/watch?v=d96cjJhvlMA</string>
    <string name="infinity_war_url">https://www.youtube.com/watch?v=6ZfuNTqbHE8</string>
    <string name="interstellar_url">https://www.youtube.com/watch?v=zSWdZVtXT7E</string>
    <string name="jurassic_world_url">https://www.youtube.com/watch?v=vn9mMeWcgoM</string>
    <string name="ocenas8_url">https://www.youtube.com/watch?v=MFWF9dU5Zc0</string>
    <string name="the_first_purge_url">https://www.youtube.com/watch?v=UL29y0ah92w</string>
    <string name="the_meg_url">https://www.youtube.com/watch?v=udm5jUA-2bs</string>
    <string name="thor_ragnarok_url">https://www.youtube.com/watch?v=ue80QwXMRHg</string>
    <!--> overviews </!-->
    <string name="infinity_war_overview">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</string>
    <string name="black_panther_overview">TChalla, heir to the hidden but advanced kingdom of Wakanda, must step forward to lead his people into a new future and must confront a challenger from his country past.</string>
    <string name="thor_ragnarok_overview">Imprisoned on the planet Sakaar, Thor must race against time to return to Asgard and stop Ragnarök, the destruction of his world, at the hands of the powerful and ruthless villain Hela.</string>
    <string name="guardians_of_the_galaxy_overview">A group of intergalactic criminals must pull together to stop a fanatical warrior with plans to purge the universe.</string>
    <string name="the_meg_overview">A group of scientists exploring the Marianas Trench encounter the largest marine predator that has ever existed - the Megalodon.</string>
    <string name="the_firs_purge_overview">Americas third political party, the New Founding Fathers of America, comes to power and conducts an experiment: no laws for 12 hours on Staten Island. No one has to stay on the island, but $5,000 is given to anyone who does.</string>
    <string name="oceans_8_overview">Debbie Ocean gathers an all-female crew to attempt an impossible heist at New York Citys yearly Met Gala.</string>
    <string name="jurassic_world_overview">When the islands dormant volcano begins roaring to life, Owen and Claire mount a campaign to rescue the remaining dinosaurs from this extinction-level event.</string>
    <string name="interstellar_overview">A team of explorers travel through a wormhole in space in an attempt to ensure humanitys survival.</string>
    <string name="deadpool2_overview">Foul-mouthed mutant mercenary Wade Wilson (a.k.a. Deadpool), brings together a team of fellow mutant rogues to protect a young boy with supernatural abilities from the brutal, time-traveling cyborg Cable.</string>
    <!--> menu items </!-->
    <string name="task_menu_item">Open Task Activity</string>
    <string name="handler_menu_item">Open Handler Activity</string>
    <string name="service_menu_item">Open Background Service Activity</string>
    <!--> Counter Fragment<!-->
    <string name="cf_create_btn">Create</string>
    <string name="cf_start_btn">Start</string>
    <string name="cf_cancel_btn">Cancel</string>
    <string name="cf_text_async">This is AsyncTask Activity</string>
    <string name="cf_text_handler">This is Handler Activity</string>
    <string name="start_intent_service_button">START INTENT SERVICE</string>
    <string name="start_service_button">START SERVICE</string>
    <string name="progress_textview">The Progress</string>
    <string name="wma_title_text">Worker progress</string>
    <string name="wma_required_network">Required Network</string>
    <string name="wma_required_charging">Required Charging</string>
    <string name="wma_required_battery">Required Battery Not Low</string>
    <string name="work_manager_menu_item">Open WorkerManager Activity</string>
    <string name="wma_enqueue_button">ENQUEUE WORK</string>
    <string name="wma_cancel_work_button">CANCEL WORK</string>
    <string name="delete_all_button_description">delete all mvoies from db button</string>
    <string name="download_image_description">download image</string>
    <string name="fd_download_icon">download icon</string>
    <string name="download_dialog_title">Permission needed</string>
    <string name="download_dialog_message">To be able downloading requested file the app need to be granted to access your files</string>
    <string name="channel_name">Defualt channel</string>
    <string name="channel_description">Default channel for notifications</string>
    <string name="notification_message">%1$d %%</string>
    <string name="notification_title">Downloading…</string>
</resources>
