<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/fd_background_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/background_height"
        tools:src="@drawable/infinity_war_background"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/background_img_description" />

    <ImageButton
        android:id="@+id/fd_download_icon"
        android:layout_width="@dimen/download_icon_width"
        android:layout_height="@dimen/download_icon_height"
        android:layout_alignEnd="@+id/fd_background_img"
        android:layout_alignBottom="@+id/fd_background_img"
        android:contentDescription="@string/fd_download_icon"
        app:srcCompat="@android:drawable/stat_sys_download"
        android:background="@color/download_icon"/>

    <ImageView
        android:id="@+id/fd_main_img"
        android:layout_width="@dimen/main_width"
        android:layout_height="@dimen/main_height"
        android:layout_below="@id/fd_background_img"
        android:layout_margin="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        tools:src="@drawable/infinity_war"
        android:contentDescription="@string/main_img_description" />
    <LinearLayout
        android:id="@+id/middle_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_height"
        android:layout_alignTop="@id/fd_main_img"
        android:layout_toEndOf="@id/fd_main_img"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fd_movie_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/infinity_war_name"
            android:textSize="@dimen/big_text_size"
            android:textColor="@color/movieTitleColor"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/released"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:textStyle="bold"
                android:text="@string/released" />

            <TextView
                android:id="@+id/fd_released_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infinity_war_released_date" />
        </LinearLayout>

        <Button
            android:id="@+id/fd_movie_trailer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_margin"
            android:text="@string/trailer_btn_text" />

    </LinearLayout>

    <TextView
        android:id="@+id/overview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/fd_main_img"
        android:layout_below="@id/fd_main_img"
        android:text="@string/overview_title"
        android:layout_marginBottom="@dimen/small_margin"
        android:textStyle="bold"/>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/fd_main_img"
        android:layout_below="@id/overview_title"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/fd_overview_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/infinity_war_overview"/>
    </ScrollView>

</RelativeLayout>
