<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/counter_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/cf_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cf_create_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/small_margin"/>

    <Button
        android:id="@+id/cf_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:text="@string/cf_start_btn"
        app:layout_constraintEnd_toStartOf="@+id/cf_cancel_button"
        app:layout_constraintStart_toEndOf="@+id/cf_create_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cf_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:text="@string/cf_cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cf_main_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/cf_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/cf_text_async" />
</androidx.constraintlayout.widget.ConstraintLayout>